force-app/main/default/objects/Open_Job_Posting_Report__c/Open_Job_Posting_Report__c.object-meta.xml
<CustomObject>
    <label>Open Job Posting Report</label>
    <nameField>
        <label>Open Job Posting Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Job Posting Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>