force-app/main/default/objects/Open_Job_Posting_Report__c/fields/Candidate_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Last_Name__c</fullName>
    <label>Candidate Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>