force-app/main/default/objects/Open_Job_Posting_Report__c/fields/Hired_Date__c.field-meta.xml
<CustomField>
    <fullName>Hired_Date__c</fullName>
    <label>Hired Date</label>
    <type>DateTime</type>
</CustomField>