force-app/main/default/objects/Open_Job_Posting_Report__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <label>Posted Date</label>
    <type>DateTime</type>
</CustomField>